# hibpm

./: .gitignore  .gitmodules  CMakeLists.txt  Parser.cpp  Parser.h  README.md  Solver.cpp  Solver.h  clean-up.sh  main.cpp
Automaton/: AbstractAutomaton.hpp  Automaton.cpp  Automaton.hpp  GraphSolver.cpp  GraphSolver.h  TopoGraph.cpp  TopoGraph.h
Automaton/automata/: main.cpp
Automaton/process/: Process.hpp
DECLARE-examples/: bpi_2017_kb.txt  declareTest.txt  ruleBase.txt  ruleBaseMod.txt
DECLARE-examples/incons/: NotResponseNonIncon.txt  falseMultSuccIncon.txt  mixedNonIncon.txt  multipleBeginning.txt  precedenceIncon.txt  successionIncon.txt  testIncon.txt  testingAlternativeResponseFalseSuccIncon.txt  testingFalseSuccIncon.txt  testingResponseSuccIncon.txt  tmpTest.txt
DECLARE-examples/overallSolverTest/: pathsWithNoOverlap.txt  precIncon.txt  precSuccIncon.txt
Declare/: Declare.cpp  Declare.hpp  Rule.cpp  Rule.hpp
Declare/example/: CMakeLists.txt  main.cpp
Process/: Binary.cpp  Binary.hpp  Process.cpp  Process.hpp  State.cpp  State.hpp  Unary.cpp  Unary.hpp
Process/Binary/: AlternateSuccession.cpp  AlternatedPrecedence.cpp  AlternatedResponse.cpp  ChainPrecedence.cpp  ChainResponse.cpp  ChainSuccession.cpp  CoExistence.cpp  NotChainSuccession.cpp  NotCoExistence.cpp  NotSuccession.cpp  Presedence.cpp  RespondedExistence.cpp  Response.cpp  Succession.cpp
Process/Unary/: AtMostOne.cpp  End.cpp  Init.cpp  Participation.cpp
Repair/: RepairAutomata.cpp  RepairAutomata.hpp
Resources/: BPI17_300.txt  bpi_2017_kb.txt  chains.txt  declareTest.txt  diffQuotes.txt  exampleMin.txt  incontest.txt  minimalExample.txt  sep.txt  sepT.txt  smallProdTest.txt  testGraph.txt
Resources/BPIC2020/models/: DomesticDeclarations.csv  DomesticDeclarations.json  DomesticDeclarations.txt  InternationalDeclarations.csv  InternationalDeclarations.json  InternationalDeclarations.txt  PermitLog.txt  PrepaidTravelCost.txt  RequestForPayment.csv  RequestForPayment.txt  declare_converter.py
Resources/BPIC2020/models/sub75_conf12-5_int12-5/: DomesticDeclarations.csv  DomesticDeclarations.txt  RequestForPayment.csv  RequestForPayment.txt
Resources/BPIC2020/models/sup75_conf12-5_int12-5/: DomesticDeclarations.txt  PrepaidTravelCost.csv  PrepaidTravelCost.txt
Resources/BPIC2020/models/sup95_conf50_int12-5/: InternationalDeclarations.txt  PermitLog.csv  PermitLog.json  PermitLog.txt  PrepaidTravelCost.csv  PrepaidTravelCost.json  RequestForPayment.json  RequestForPayment.txt
Resources/incons/: NotChainResponseIncon.txt  NotResponseIncon.txt  nonInconWrongA.txt  oneInconMixedNCE.txt  responseIncon.txt  testingAlternativeFalseSuccIncon.txt  testingAlternativePrecedenceFalseSuccIncon.txt  testingAlternativeResponseSuccIncon.txt  testingResponseFalseSuccIncon.txt  tmpTest2.txt
Resources/overallSolverTest/: partNotCoNoIncon.txt
automataSolver/automata/: Automaton.cpp  Automaton.hpp  DFASpecial.cpp  DFASpecial.hpp  main.cpp
automataSolver/automataX/automataX.xcodeproj/: project.pbxproj
automataSolver/automataX/automataX.xcodeproj/project.xcworkspace/xcuserdata/jandson.xcuserdatad/: UserInterfaceState.xcuserstate
automataSolver/automataX/automataX.xcodeproj/xcuserdata/jandson.xcuserdatad/xcschemes/: xcschememanagement.plist
automataSolver/automatas/automatas.xcodeproj/: project.pbxproj
automataSolver/automatas/automatas.xcodeproj/project.xcworkspace/xcuserdata/jandson.xcuserdatad/: UserInterfaceState.xcuserstate
automataSolver/automatas/automatas.xcodeproj/xcuserdata/jandson.xcuserdatad/xcschemes/: xcschememanagement.plist
automataSolver/process/: Process.hpp  process.cpp  process.hpp
config/: Libraries.cmake  Sources.cmake
config/lib/: BisonFlex.cmake  EvalMaxSAT.cmake
executables/: CMakeLists.txt
executables/hello_MaxSAT/: CMakeLists.txt  main.cpp
executables/hello_parser/: CMakeLists.txt  main.cpp
executables/lazy_expansion/: CMakeLists.txt  main.cpp
executables/maxsat_converter/: CMakeLists.txt  main.cpp
executables/run_experiment/: main.cpp
parser/: CMakeLists.txt  Declare.cpp  Declare.hh  Parser.cpp  Parser.h  Solver.cpp  Solver.h  build.sh  declare-ctx.hh  declare-driver.hpp  declare-parser.yy  declare-rules.cpp  declare-rules.h  declare-rules.hpp  declare-scanner.l  declare.l  declare.yy  declare_parser.cc  main.c  main.cc  main.cpp  parser.y  scanner.l  scanner.ll  simple-build.sh  simpleScanner.ll
parser/Declare/: Declare.cpp  Declare.hpp
parser/Declare/example/: CMakeLists.txt  main.cpp
src/hibpm/: AbstractAutomaton.cpp  AbstractAutomaton.hpp  Automaton.cpp  Automaton.hpp  Binary.cpp  Binary.hpp  Constraint.cpp  Constraint.hpp  Declare.cpp  Declare.hpp  DeclareContext.cpp  DeclareContext.hpp  DeclareKnowledgeBase.cpp  DeclareKnowledgeBase.hpp  DeclareParser.cpp  DeclareParser.hpp  GraphSolver.cpp  GraphSolver.hpp  Parser.cpp  Parser.hpp  Process.cpp  Process.hpp  RemainderComposition.hpp  RepairAutomata.cpp  RepairAutomata.hpp  Rule.cpp  Rule.hpp  State.cpp  State.hpp  TopoGraph.cpp  TopoGraph.h  TopoGraph.hpp  Unary.cpp  Unary.hpp
src/hibpm/Binary/: AlternateSuccession.cpp  AlternatedPrecedence.cpp  AlternatedResponse.cpp  ChainPrecedence.cpp  ChainResponse.cpp  ChainSuccession.cpp  CoExistence.cpp  NotChainSuccession.cpp  NotCoExistence.cpp  NotSuccession.cpp  Precedence.cpp  RespondedExistence.cpp  Response.cpp  Succession.cpp
src/hibpm/Unary/: AtLeastOne.cpp  AtMostOne.cpp  AtMostThree.cpp  AtMostTwo.cpp  End.cpp  Init.cpp  Participation.cpp
src/hibpm/declare-parser/: declare-lexer.cpp  declare-parser.cpp  declare-parser.hpp  declare.l  declare.yy  location.hh
